// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountProfile /> should render when administrator 1`] = `
<div>
  <Profile__AccountProfileHeader>
    <div>
      <h3>
        foo
        <Label
          color="purple"
          key="administrator"
        >
          <Icon
            faStyle="fas"
            fixedWidth={false}
            name="user-shield"
          />
           Administrator
        </Label>
      </h3>
      <Profile__AccountProfileGroups>
        <Label
          key="test"
        >
          <Icon
            faStyle="fas"
            fixedWidth={false}
            name="users"
          />
           
          test
        </Label>
      </Profile__AccountProfileGroups>
    </div>
  </Profile__AccountProfileHeader>
  <Connect(Email) />
  <Connect(ChangePassword) />
</div>
`;

exports[`<AccountProfile /> should render when not administrator 1`] = `
<div>
  <Profile__AccountProfileHeader>
    <div>
      <h3>
        foo
      </h3>
      <Profile__AccountProfileGroups>
        <Label
          key="test"
        >
          <Icon
            faStyle="fas"
            fixedWidth={false}
            name="users"
          />
           
          test
        </Label>
      </Profile__AccountProfileGroups>
    </div>
  </Profile__AccountProfileHeader>
  <Connect(Email) />
  <Connect(ChangePassword) />
</div>
`;
